Updated the post, what_is_garbage_collection.
Signed-off-by: Dongho Sim <dhsim86@gmail.com>